Completed store page design and functionality changes

--- a/about.html
+++ b/about.html
@@ -7,7 +7,7 @@
   <link rel="stylesheet" href="css/bootstrap.min.css">
   <link rel="stylesheet" href="css/style.css">
   <script defer src="https://use.fontawesome.com/releases/v5.0.6/js/all.js"></script>
-  <link href="open-iconic/font/css/open-iconic-bootstrap.css" rel="stylesheet">
+  <link href="open-iconic/font/css/open-iconic-bootstrap.min.css" rel="stylesheet">
   <link rel="apple-touch-icon" href="img/bookmark_icon.png" />
   <title>About</title>
 </head>
@@ -30,11 +30,17 @@
         <li class="nav-item active">
           <a class="nav-link" href="about.html">About</a>
         </li>
+        <!-- <li class="nav-item">
+          <a class="nav-link" href="science.html">The Science</a>
+        </li> -->
         <li class="nav-item">
           <a class="nav-link" href="us.html">Why Us</a>
         </li>
         <li class="nav-item">
-          <a class="nav-link" href="index.php">Sign Up</a>
+          <a class="nav-link" href="reviews.html">Reviews</a>
+        </li>
+        <li class="nav-item">
+          <a class="nav-link" href="store.php">Sign Up</a>
         </li>
       </ul>
     </div>
@@ -47,11 +53,6 @@
     <div class="py-3" style="max-width: 50rem; margin: 0 auto;">
       <img src="img/xander_stretch.jpg" class="rounded img-fluid">
     </div>
-  </div>
-
-  <!-- Free Trial -->
-  <div class="container text-center my-4">
-    <a target="_blank" href="https://goo.gl/forms/BgVvh7MH21QTJy143" class="btn btn-primary btn-lg" role="button">Click here to sign up for a free trial!</a>
   </div>
 
   <div class="container my-2">
@@ -132,7 +133,7 @@
 
   <!-- Footer -->
   <footer class="container-fluid container-blue">
-    <div class="offwhite container text-center">
+    <div class="offwhite container text-center pb-3">
       <div class="p-3">
         <a target="_blank" href="https://www.facebook.com/InfiniteFitnessOfficial/"><i class="fab fa-facebook fa-3x fa-fw"></i></a>
         <a target="_blank" href="https://www.instagram.com/iaminfinitelyfit/"><i class="fab fa-instagram fa-3x fa-fw"></i></a>
@@ -140,9 +141,6 @@
       <h6 class="text-left">Disclaimer :</h6>
       <p class="text-justify"><small>Always consult with a qualified healthcare professional prior to beginning any diet or exercise program, or taking any dietary supplements. The content on both our website and social media pages is for informational and educational purposes only and it is not intended as medical advice or to replace a relationship with a qualified Healthcare Professional.</small></p>
     </div>
-      <div class="text-right">
-        <a href="#" onclick="window.open('https://www.sitelock.com/verify.php?site=iaminfinitelyfit.com','SiteLock','width=600,height=600,left=160,top=170');"><img class="img-responsive" alt="SiteLock" title="SiteLock" src="//shield.sitelock.com/shield/iaminfinitelyfit.com"></a>
-      </div>
   </footer>
 
   <!-- Scripts -->
