--- a/index.html
+++ b/index.html
@@ -30,10 +30,16 @@
           <a class="nav-link" href="about.html">About</a>
         </li>
         <li class="nav-item">
+          <!-- <a class="nav-link" href="science.html">The Science</a>
+        </li>
+        <li class="nav-item"> -->
           <a class="nav-link" href="us.html">Why Us</a>
         </li>
         <li class="nav-item">
-          <a class="nav-link" href="index.php">Sign Up</a>
+          <a class="nav-link" href="reviews.html">Reviews</a>
+        </li>
+        <li class="nav-item">
+          <a class="nav-link" href="store.php">Sign Up</a>
         </li>
       </ul>
     </div>
@@ -42,11 +48,6 @@
   <!-- Jumbotron -->
   <div class="jumbotron jumbotron-home text-center">
     <h1 class="blue display-2 my-5 py-5">Infinite Fitness</h1>
-  </div>
-
-  <!-- Free Trial -->
-  <div class="container text-center my-4">
-    <a target="_blank" href="https://goo.gl/forms/BgVvh7MH21QTJy143" class="btn btn-primary btn-lg" role="button">Click here to sign up for a free trial!</a>
   </div>
 
   <!-- 3 Column -->
@@ -110,27 +111,43 @@
     <h2 class="blue text-center">How Do You Want to Get Infinitely Fit?</h2>
     <h4 class="gray text-center">Choose the plan that's right for you!</h4>
     <div class="row">
-      <div class="col-lg-6 my-3">
+      <div class="col-lg-4 my-3">
         <img src="img/home.jpg" class="rounded img-fluid">
-        <h3 class="blue text-center py-3">InfiniteFit</h3>
+        <h3 class="blue text-center py-3">Infinite Fit Basic | $35 Monthly</h3>
         <ul class="gray list-group list-group-flush">
           <li class="list-group-item">At home workouts</li>
           <li class="list-group-item">Get into shape and maintain a healthy lifestyle without having to go to a gym</li>
           <li class="list-group-item">Unique workouts designed for you to do anytime and anywhere</li>
-          <li class="list-group-item">Every workout is different!</li>
-          <li class="list-group-item">Basic fitness testing and tracking to help guide you towards a healthier you</li>
+          <li class="list-group-item">Begin at your fitness level</li>
           <li class="list-group-item">Perfect for anyone who travels or has busy schedules</li>
           <li class="list-group-item">Guidance to get you started & enjoying exercise</li>
+          <li class="list-group-item">All inclusive workout program:
+            <ul class="list-group-flush">
+              <li class="list-group-item">Strength</li>
+              <li class="list-group-item">Endurance</li>
+              <li class="list-group-item">Flexibility</li>
+              <li class="list-group-item">Balance</li>
+            </ul>
+          </li>
         </ul>
       </div>
-      <div class="col-lg-6 my-3">
+      <div class="col-lg-4 my-3">
         <img src="img/gym.jpg" class="rounded img-fluid">
-        <h3 class="blue text-center py-3">InfiniteHealth (Coming Soon)</h3>
+        <h3 class="blue text-center py-3">Infinite Fit Pro | $50 Monthly</h3>
         <ul class="gray list-group list-group-flush">
-          <li class="list-group-item">Gym based workouts</li>
-          <li class="list-group-item">For those looking to take fitness and health to the next level</li>
-          <li class="list-group-item">Wide variety of cardio, exercises, and workouts</li>
-          <li class="list-group-item">Increased fitness tracking to put you in control of achieving your goals</li>
+          <li class="list-group-item">Everything included from Infinite Fit Basic, plus more :</li>
+          <li class="list-group-item">Fitness tracking to put you in control of achieving your goals</li>
+          <li class="list-group-item">Monthly workout calendars to help you stay on track</li>
+        </ul>
+      </div>
+      <div class="col-lg-4 my-3">
+        <img src="img/situp.jpg" class="rounded img-fluid">
+        <h3 class="blue text-center py-3">GymnastABS | $60 One-time payment</h3>
+        <ul class="gray list-group list-group-flush">
+          <li class="list-group-item">Home & Gym based</li>
+          <li class="list-group-item">One month wokrout program</li>
+          <li class="list-group-item">Triphasic Training protocols</li>
+          <li class="list-group-item">Tone & Strengthen your Abdominal cavity, core, and posture</li>
         </ul>
       </div>
     </div>
@@ -141,16 +158,13 @@
 
   <!-- Footer -->
   <footer class="container-fluid container-blue">
-    <div class="offwhite container text-center">
+    <div class="offwhite container text-center pb-3">
       <div class="p-3">
         <a target="_blank" href="https://www.facebook.com/InfiniteFitnessOfficial/"><i class="fab fa-facebook fa-3x fa-fw"></i></a>
         <a target="_blank" href="https://www.instagram.com/iaminfinitelyfit/"><i class="fab fa-instagram fa-3x fa-fw"></i></a>
       </div>
       <h6 class="text-left">Disclaimer :</h6>
       <p class="text-justify"><small>Always consult with a qualified healthcare professional prior to beginning any diet or exercise program, or taking any dietary supplements. The content on both our website and social media pages is for informational and educational purposes only and it is not intended as medical advice or to replace a relationship with a qualified Healthcare Professional.</small></p>
-    </div>
-    <div class="text-right">
-      <a href="#" onclick="window.open('https://www.sitelock.com/verify.php?site=iaminfinitelyfit.com','SiteLock','width=600,height=600,left=160,top=170');"><img class="img-responsive" alt="SiteLock" title="SiteLock" src="//shield.sitelock.com/shield/iaminfinitelyfit.com"></a>
     </div>
   </footer>
 
