--- a/team.html
+++ b/team.html
@@ -75,7 +75,7 @@
 
   <!-- Footer -->
   <footer class="container-fluid container-blue">
-    <div class="offwhite container text-center">
+    <div class="offwhite container text-center pb-3">
       <div class="p-3">
         <a target="_blank" href="https://www.facebook.com/InfiniteFitnessOfficial/"><i class="fab fa-facebook fa-3x fa-fw"></i></a>
         <a target="_blank" href="https://www.instagram.com/iaminfinitelyfit/"><i class="fab fa-instagram fa-3x fa-fw"></i></a>
@@ -83,9 +83,6 @@
       <h6 class="text-left">Disclaimer :</h6>
       <p class="text-justify"><small>Always consult with a qualified healthcare professional prior to beginning any diet or exercise program, or taking any dietary supplements. The content on both our website and social media pages is for informational and educational purposes only and it is not intended as medical advice or to replace a relationship with a qualified Healthcare Professional.</small></p>
     </div>
-      <div class="text-right">
-        <a href="#" onclick="window.open('https://www.sitelock.com/verify.php?site=iaminfinitelyfit.com','SiteLock','width=600,height=600,left=160,top=170');"><img class="img-responsive" alt="SiteLock" title="SiteLock" src="//shield.sitelock.com/shield/iaminfinitelyfit.com"></a>
-      </div>
   </footer>
 
   <!-- Scripts -->
